[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumina-api"
version = "0.1.0"
description = "FastAPI backend for Lumina Fantasies"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "greenlet>=3.1.1,<4.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pydantic>=2.10.3,<3.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "python-json-logger>=3.2.1,<4.0.0",
  "redis>=5.2.1,<6.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "stripe>=12.0.0,<13.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4,<9.0.0",
  "pytest-asyncio>=0.25.0,<1.0.0",
  "ruff>=0.8.4,<1.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
